Tweak welcome message

--- a/public/index.html
+++ b/public/index.html
@@ -98,16 +98,11 @@
         }
       }
 
-      addMessage(
-        "bot",
-        `Hello!
+      addMessage("bot", `Hello!
 
 So, you're thinking about hiring Asaf? Well you've come to the right place. My name is AsafBot9000. I am a virtual simulacrum of one Asaf Rubin, PhD, MBA who isn't available right now, probably because he's off doing weird nerd stuff.
 
-Not to worry though. Asaf's elected me as his proxy and I'm here to answer any and all questions you might have about him. Shoot!
-
-(Note: I am sometimes prone to hallucinations. If I start going off about Asaf's experience hunting orangutans in the jungles of Borneo, please just refresh the page and I'll recalibrate accordingly.)`
-      );
+Not to worry though. Asaf's elected me as his proxy and I'm here to answer any and all questions you might have about him. Shoot!`);
 
       inputEl.focus();
     </script>
