--- a/public/index.html
+++ b/public/index.html
@@ -1,110 +1,307 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Asaf — CV Chatbot</title>
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; }
-      .wrap { max-width: 820px; margin: 0 auto; padding: 16px; }
-      .title { margin: 6px 0 2px; }
-      .sub { margin: 0 0 14px; color: #555; font-size: 14px; }
-      .chat { border: 1px solid #ddd; border-radius: 12px; padding: 12px; height: 70vh; overflow-y: auto; background: #fafafa; }
-      .row { display: flex; margin: 10px 0; }
-      .row.user { justify-content: flex-end; }
-      .row.bot { justify-content: flex-start; }
-      .bubble { max-width: 78%; padding: 10px 12px; border-radius: 14px; line-height: 1.35; white-space: pre-wrap; }
-      .user .bubble { background: #1f2937; color: #fff; border-bottom-right-radius: 4px; }
-      .bot .bubble { background: #fff; color: #111; border: 1px solid #e5e7eb; border-bottom-left-radius: 4px; }
-      .composer { display: flex; gap: 8px; margin-top: 12px; }
-      input { flex: 1; padding: 12px; border-radius: 10px; border: 1px solid #ddd; font-size: 16px; }
-      button { padding: 12px 14px; border-radius: 10px; border: 1px solid #ddd; background: #fff; cursor: pointer; }
-      button:disabled { opacity: 0.6; cursor: not-allowed; }
-      .hint { font-size: 12px; color: #666; margin-top: 8px; }
-      .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
-    </style>
-  </head>
-  <body>
-    <div class="wrap">
-      <h2 class="title">Asaf — CV Chatbot</h2>
-      <p class="sub">Ask about my background, experience, and interests. I answer from my CV + bio only.</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Asaf — CV Chatbot</title>
+  <style>
+    :root{
+      --bg: #0b0f14;
+      --panel: #111827;
+      --panel2:#0f172a;
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --border: rgba(255,255,255,0.08);
+      --bubbleUser:#1f2937;
+      --bubbleBot:#0b1220;
+      --accent:#60a5fa;
+      --shadow: 0 10px 30px rgba(0,0,0,0.35);
+      --radius: 16px;
+    }
+    *{ box-sizing:border-box; }
+    body{
+      margin:0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Inter, Helvetica, Arial, sans-serif;
+      background: radial-gradient(1200px 800px at 20% -10%, rgba(96,165,250,0.15), transparent 60%),
+                  radial-gradient(900px 700px at 100% 0%, rgba(167,139,250,0.10), transparent 55%),
+                  var(--bg);
+      color: var(--text);
+    }
+    a{ color: var(--accent); }
+    .wrap{
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 24px;
+    }
+    .topbar{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 12px;
+      margin-bottom: 16px;
+    }
+    .brand{
+      font-weight: 700;
+      letter-spacing: 0.2px;
+    }
+    .sub{
+      color: var(--muted);
+      font-size: 13px;
+      margin-top: 4px;
+      line-height: 1.35;
+    }
 
-      <div id="chat" class="chat" aria-live="polite"></div>
+    .grid{
+      display:grid;
+      grid-template-columns: 1fr 320px;
+      gap: 16px;
+      align-items:start;
+    }
+    @media (max-width: 900px){
+      .grid{ grid-template-columns: 1fr; }
+    }
 
-      <div class="composer">
-        <input id="question" type="text" placeholder="Ask a question..." />
-        <button id="sendBtn" onclick="send()">Send</button>
+    .card{
+      background: linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      overflow:hidden;
+    }
+    .cardHeader{
+      padding: 16px 16px 0 16px;
+    }
+    .welcome{
+      background: rgba(255,255,255,0.03);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      padding: 14px;
+      margin-top: 12px;
+      color: var(--text);
+      line-height: 1.45;
+      white-space: pre-line;
+    }
+
+    .chat{
+      padding: 16px;
+      height: 560px;
+      overflow:auto;
+    }
+    @media (max-width: 900px){
+      .chat{ height: 520px; }
+    }
+    .msgRow{
+      display:flex;
+      margin: 10px 0;
+      gap: 10px;
+    }
+    .msgRow.user{ justify-content:flex-end; }
+    .bubble{
+      max-width: 80%;
+      padding: 12px 12px;
+      border-radius: 14px;
+      border: 1px solid var(--border);
+      line-height: 1.45;
+      white-space: pre-wrap;
+    }
+    .bubble.user{
+      background: rgba(96,165,250,0.12);
+      border-color: rgba(96,165,250,0.18);
+    }
+    .bubble.bot{
+      background: rgba(255,255,255,0.03);
+    }
+    .meta{
+      color: var(--muted);
+      font-size: 12px;
+      margin-top: 6px;
+    }
+
+    .composer{
+      display:flex;
+      gap: 10px;
+      padding: 14px 16px 16px 16px;
+      border-top: 1px solid var(--border);
+      background: rgba(0,0,0,0.18);
+    }
+    input[type="text"]{
+      flex:1;
+      padding: 12px 12px;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.04);
+      color: var(--text);
+      outline: none;
+      font-size: 14px;
+    }
+    input[type="text"]::placeholder{ color: rgba(229,231,235,0.45); }
+    button{
+      padding: 12px 14px;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.06);
+      color: var(--text);
+      cursor:pointer;
+      font-weight: 600;
+    }
+    button:hover{ border-color: rgba(255,255,255,0.18); }
+    button:disabled{
+      opacity:0.55;
+      cursor:not-allowed;
+    }
+
+    .side{
+      padding: 16px;
+    }
+    .side h3{
+      margin:0 0 10px 0;
+      font-size: 14px;
+      letter-spacing: 0.2px;
+    }
+    .side p{
+      margin:0 0 12px 0;
+      color: var(--muted);
+      font-size: 13px;
+      line-height: 1.4;
+    }
+    .pill{
+      display:block;
+      width:100%;
+      text-align:left;
+      margin: 8px 0;
+      padding: 10px 10px;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,0.03);
+      color: var(--text);
+      cursor:pointer;
+      font-size: 13px;
+      line-height: 1.25;
+    }
+    .pill:hover{ border-color: rgba(96,165,250,0.30); }
+    .tiny{
+      margin-top: 14px;
+      color: rgba(229,231,235,0.55);
+      font-size: 12px;
+      line-height: 1.35;
+    }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="topbar">
+      <div>
+        <div class="brand">Asaf — CV Chatbot</div>
+        <div class="sub">Ask about Asaf’s background, experience, and interests. Answers are grounded in his CV + bio.</div>
       </div>
-      <div class="hint">Tip: press <span class="mono">Enter</span> to send.</div>
     </div>
 
-    <script>
-      const chatEl = document.getElementById("chat");
-      const inputEl = document.getElementById("question");
-      const sendBtn = document.getElementById("sendBtn");
-
-      function addMessage(role, text) {
-        const row = document.createElement("div");
-        row.className = "row " + role;
-
-        const bubble = document.createElement("div");
-        bubble.className = "bubble";
-        bubble.textContent = text;
-
-        row.appendChild(bubble);
-        chatEl.appendChild(row);
-        chatEl.scrollTop = chatEl.scrollHeight;
-      }
-
-      function setBusy(isBusy) {
-        sendBtn.disabled = isBusy;
-        inputEl.disabled = isBusy;
-      }
-
-      inputEl.addEventListener("keydown", (e) => {
-        if (e.key === "Enter") send();
-      });
-
-      async function send() {
-        const message = inputEl.value.trim();
-        if (!message) return;
-
-        addMessage("user", message);
-        inputEl.value = "";
-
-        setBusy(true);
-        addMessage("bot", "…");
-
-        try {
-          const res = await fetch("/chat", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({ message }),
-          });
-
-          const data = await res.json();
-
-          const rows = chatEl.querySelectorAll(".row.bot");
-          const lastBot = rows[rows.length - 1];
-          lastBot.querySelector(".bubble").textContent = data.reply || "(empty reply)";
-        } catch (err) {
-          const rows = chatEl.querySelectorAll(".row.bot");
-          const lastBot = rows[rows.length - 1];
-          lastBot.querySelector(".bubble").textContent = "Error: " + err.message;
-        } finally {
-          setBusy(false);
-          inputEl.focus();
-          chatEl.scrollTop = chatEl.scrollHeight;
-        }
-      }
-
-      addMessage("bot", `Hello!
+    <div class="grid">
+      <div class="card">
+        <div class="cardHeader">
+          <div class="welcome" id="welcome">
+Hello!
 
 So, you're thinking about hiring Asaf? Well you've come to the right place. My name is AsafBot9000. I am a virtual simulacrum of one Asaf Rubin, PhD, MBA who isn't available right now, probably because he's off doing weird nerd stuff.
 
-Not to worry though. Asaf's elected me as his proxy and I'm here to answer any and all questions you might have about him. Shoot!`);
+Not to worry though. Asaf's elected me as his proxy and I'm here to answer any and all questions you might have about him. Shoot!
+          </div>
+        </div>
 
+        <div class="chat" id="chat"></div>
+
+        <div class="composer">
+          <input id="question" type="text" placeholder="Ask a question…" />
+          <button id="sendBtn">Send</button>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="side">
+          <h3>Try asking…</h3>
+          <p>Click one to populate the input box.</p>
+
+          <button class="pill" data-q="Give me the 30-second summary of your background.">Give me the 30-second summary of your background.</button>
+          <button class="pill" data-q="What did you do at Russell Reynolds Associates?">What did you do at Russell Reynolds Associates?</button>
+          <button class="pill" data-q="What are your strongest skills and tools?">What are your strongest skills and tools?</button>
+          <button class="pill" data-q="What kind of roles are you looking for next?">What kind of roles are you looking for next?</button>
+          <button class="pill" data-q="What are some highlights / achievements you’re proud of?">What are some highlights / achievements you’re proud of?</button>
+          <button class="pill" data-q="Where are you based and what’s your availability?">Where are you based and what’s your availability?</button>
+
+          <div class="tiny">
+            Tip: Press <b>Enter</b> to send. If you want a fresh thread, refresh the page.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    // Simple per-tab session id (so different tabs don’t share memory)
+    const sessionId = crypto.randomUUID();
+
+    const chatEl = document.getElementById("chat");
+    const inputEl = document.getElementById("question");
+    const sendBtn = document.getElementById("sendBtn");
+
+    function addMessage(role, text) {
+      const row = document.createElement("div");
+      row.className = `msgRow ${role === "user" ? "user" : "bot"}`;
+
+      const bubble = document.createElement("div");
+      bubble.className = `bubble ${role === "user" ? "user" : "bot"}`;
+      bubble.textContent = text;
+
+      row.appendChild(bubble);
+      chatEl.appendChild(row);
+      chatEl.scrollTop = chatEl.scrollHeight;
+    }
+
+    async function send() {
+      const message = inputEl.value.trim();
+      if (!message) return;
+
+      addMessage("user", message);
+      inputEl.value = "";
       inputEl.focus();
-    </script>
-  </body>
+
+      sendBtn.disabled = true;
+      const prevText = sendBtn.textContent;
+      sendBtn.textContent = "…";
+
+      try {
+        const res = await fetch("/chat", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "x-session-id": sessionId
+          },
+          body: JSON.stringify({ message }),
+        });
+
+        const data = await res.json();
+        addMessage("bot", data.reply || "(No reply)");
+      } catch (e) {
+        addMessage("bot", "Something broke. Refresh the page and try again.");
+      } finally {
+        sendBtn.disabled = false;
+        sendBtn.textContent = prevText;
+      }
+    }
+
+    // send on click / enter
+    sendBtn.addEventListener("click", send);
+    inputEl.addEventListener("keydown", (e) => {
+      if (e.key === "Enter") send();
+    });
+
+    // suggested questions
+    document.querySelectorAll(".pill").forEach(btn => {
+      btn.addEventListener("click", () => {
+        inputEl.value = btn.getAttribute("data-q");
+        inputEl.focus();
+      });
+    });
+  </script>
+</body>
 </html>
